[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.23.0", features = ["rt", "macros", "rt-multi-thread"] }
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
futures = "0.3.25"
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"]}